@@ -75,8 +75,7 @@ gretty {
                '-Dconfig.file=' + projectDir + '/src/main/resources/dev.properties',
                '-Dcredentials.file=' + projectDir + '/src/main/resources/dev-credentials.properties',
                '-Dresources.folder=/' + projectDir + '/../src/main/resources',
-               '-Dcertificate.folder=/' + projectDir + '/../devops/openshift/test/env',
-               '-XX:MaxPermSize=256M'
+               '-Dcertificate.folder=/' + projectDir + '/../devops/openshift/test/env'
                ]
 
     /***************** Konfiguration för att köra med SITHS aktiverat lokalt. *******************/
